Cut down the allow_install suite to allow_installing_outdated_dists and allow_installing_module_downgrades
- the four others have fallen out of grace for various reasons
- accompanied by rewording some docs

--- a/distroprefs/MAUKE.Keyword-Simple.yml
+++ b/distroprefs/MAUKE.Keyword-Simple.yml
@@ -5,8 +5,8 @@ comment: |
   https://rt.cpan.org/Ticket/Display.html?id=125540
 
   Additionally, this distroprefs file is an illustration how to deal
-  with allow_installing_outdated_* when the goal of the goto is
-  to install an outdated dist or module.
+  with allow_installing_outdated_dists when the goal of the goto is
+  to install an outdated dist.
 
 match:
   distribution: "^MAUKE/Keyword-Simple-0.04.tar.gz"
@@ -16,5 +16,3 @@ match:
   distribution: "^MAUKE/Keyword-Simple-0.03.tar.gz"
 cpanconfig:
   allow_installing_outdated_dists: yes
-  allow_installing_outdated_modules: yes
-  allow_installing_modules_from_wrong_dists: yes
