add comments to distropref on CGI-Application-Dispatch

--- a/distroprefs/MARKSTOS.CGI-Application-Dispatch.yml
+++ b/distroprefs/MARKSTOS.CGI-Application-Dispatch.yml
@@ -12,3 +12,8 @@ disabled: 1
 #       - "skip\n\n\n\n\n"
 
 #  can't figure out why this distroprefs file never works
+
+# https://cpan.metacpan.org/authors/id/M/MA/MARKSTOS/CGI-Application-Dispatch-3.12.tar.gz
+# looks like abandoned since 2012 anyway
+
+# See also https://rt.cpan.org/Ticket/Display.html?id=130785
