--- a/distroprefs/01.DISABLED.yml
+++ b/distroprefs/01.DISABLED.yml
@@ -249,6 +249,7 @@ match:
     |LTP/Audio-Play-MPlayer-\d               # hangs
     |LDS/Bio-BigFile-1.07.tar.gz             # https://rt.cpan.org/Ticket/Display.html?id=56916
     |LUISMUNOZ/IO-File-Log-1.01.tar.gz       # seems like abandoned since 2002
+    |LUISMUNOZ/Mail-Abuse-1.026.tar.gz       # seems like abandoned since 2007
     |LUPE/Filesys-SamFS-\d                   # have no SamFS
     |LUSHE/Egg-Release-DBI                   # brings laptop to its knees RT #39239
     |LUSOL/tkjuke-2.2.1.tar.gz               # asks questions
