looks like an abandoned module

--- a/distroprefs/01.DISABLED.yml
+++ b/distroprefs/01.DISABLED.yml
@@ -245,6 +245,7 @@ match:
     |LBAXTER/Openview-Message-0.03.tar.gz
     |LBROCARD/Devel-ebug-HTTP-0.32           # http://rt.cpan.org/Ticket/Display.html?id=40599
     |LDS/Bio-SamTools-\d                     # requires non-CPAN prereq
+    |LEIFHED/perldap-1.4.tar.gz              # looks like abandoned since 1999
     |LEOCHARRE/WWW-Autosite-                 # asks question, does not use prompt RT 35081
     |LGODDARD/Tk-Wizard-2.158.tar.gz
     |LTP/Audio-Play-MPlayer-\d               # hangs
