distroprefs: distro fails 100%

--- a/distroprefs/01.DISABLED.yml
+++ b/distroprefs/01.DISABLED.yml
@@ -154,6 +154,7 @@ match:
     |GEOTIGER/Oracle-Trigger-\d              # may call both CPANPLUS::install and CPAN::install
     |GGARAND/PerlQt-3.008.tar.gz             # disk scans taking forever
     |GKNAUSS/WebService-Upcoming             # for members only
+    |GOLOGO/Podcast-ESLPodcast-Splitter-v0.0.1 # only fails on cpantesters
     |GONERI/Ocsinventory-Agent-0.0.8.tar.gz  # hangs
     |GONERI/Ocsinventory-Agent-\d            # hanger
     |GRICHTER/Apache-SessionX-2.01.tar.gz    # user input required
