distroprefs for Keyword-Simple: downgrading to 0.03 seems also not ideal, disabling

--- a/distroprefs/MAUKE.Keyword-Simple.yml
+++ b/distroprefs/MAUKE.Keyword-Simple.yml
@@ -8,9 +8,9 @@ comment: |
   with allow_installing_outdated_dists when the goal of the goto is
   to install an outdated dist.
 
-match:
-  distribution: "^MAUKE/Keyword-Simple-0.04.tar.gz"
-goto: "MAUKE/Keyword-Simple-0.03.tar.gz"
+#match:
+#  distribution: "^MAUKE/Keyword-Simple-0.04.tar.gz"
+#goto: "MAUKE/Keyword-Simple-0.03.tar.gz"
 ---
 match:
   distribution: "^MAUKE/Keyword-Simple-0.03.tar.gz"
