--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,6 @@ ChangeLog
 ./distroprefs/G[AC-Z]*.dd
 ./distroprefs/I[A-KMO-Z]*.dd
 /MYMETA.*
+/related/*/MYMETA.*
 # used by scripts/cpan
 cpan-home
