distroprefs: handle POE-XS-Loop-EPoll with RCAPUTO.POE.yml

--- a/distroprefs/RCAPUTO.POE.yml
+++ b/distroprefs/RCAPUTO.POE.yml
@@ -1,7 +1,7 @@
 --- 
 comment: "Xvfb :121 must be started by somebody else"
 match:
-  distribution: '^RCAPUTO/POE-(Loop-Event-)?\d'
+  distribution: '^(RCAPUTO|TONYC)/POE-(Loop-Event-|XS-Loop-EPoll-)?\d'
 pl: 
   expect:
     - "Would you like to skip the network tests"
