CI migration from travis to Github Actions
- runs on all OSes: win, mac and linux
- runs free and fast
- added recent perl versions
- allowed failures on windows for 5.10 - 5.20 (fixing this is a separate task)

--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,8 @@ t/97-return_values.out
 test.out
 *.swp
 .*
+!.github
 !.gitignore
-!.travis.yml
 SIGNATURE
 t/CPAN/authors/id/A/AN/ANDK/NotInChecksums-0.000.tar.gz
 ./CPAN-*
