do not send tests because we cannot make sure to not run under X-Windows

--- a/distroprefs/02.NOREPORT.yml
+++ b/distroprefs/02.NOREPORT.yml
@@ -41,6 +41,7 @@ match:
     |MSHELOR/
     |SHLOMIF/                                # author opt out 2013-06-24
     |MLEHMANN/Canary-Stability-              # testless
+    |RKELSCH/Graphics-Framebuffer-\d         # does not want tests that are produced within X-Windows
     )|
 cpanconfig:
   test_report: 0
