--- a/distroprefs/01.DISABLED.yml
+++ b/distroprefs/01.DISABLED.yml
@@ -313,6 +313,7 @@ match:
     |OESTERHOL/Aut-0.11.tar.gz               # looks like abandoned since 2004
     |OKHARCH/Parallel-DataPipe-0.11.tar.gz   # https://rt.cpan.org/Ticket/Display.html?id=132464
     |PATL/autorequire-0.08.tar.gz
+    |PBOETTCH/ARCv2-1.05.tar.gz              # tests run forever in background, no green test report since 2018, no reverse deps
     |PERFSONAR/perfSONAR_PS-DB-RRD-0.09.tar.gz # looks like abandoned since 2008
     |PERIGRIN/Git-Wrapper-\d                 # some huge kill triggered?
     |PERLER/CatalystX-ExtJS-Direct-\d        #
