--- a/distroprefs/JDEGUEST.Net-API-CPAN.yml
+++ b/distroprefs/JDEGUEST.Net-API-CPAN.yml
@@ -4,6 +4,6 @@ comment: |
   as of now still unreported
 
 match:
-  distribution: "^JDEGUEST/(Storable-Improved-v0.1.3|Promise-Me-v0.5.0|Net-API-CPAN-v0.1.5|Module-Generic-v0.37.7|HTTP-Promise-v0.5.2|Getopt-Class-v1.1.3|Data-Pretty-v0.1.9|DateTime-TimeZone-Catalog-Extend-v0.3.3|DateTime-Format-JP-v0.1.6|Cookie-v0.3.5|Changes-v0.3.5).tar.gz"
+  distribution: "^JDEGUEST/(Storable-Improved-v0.1.3|Promise-Me-v0.5.0|Nice-Try-v1.3.15|Net-API-CPAN-v0.1.5|Module-Generic-v0.37.7|HTTP-Promise-v0.5.2|Getopt-Class-v1.1.3|Data-Pretty-v0.1.9|DateTime-TimeZone-Catalog-Extend-v0.3.3|DateTime-Format-JP-v0.1.6|Cookie-v0.3.5|Changes-v0.3.5).tar.gz"
 cpanconfig:
   check_sigs: 0
